syntax="proto3";

package v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/dotdak/exchange-system/proto;v1";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  schemes: HTTPS;
};

service BuyService {
  rpc Buy(BuyRequest) returns (BuyResponse) {
    option (google.api.http) = {
      // Route to this method from POST requests to /api/v1/buys
      post: "/buy/{wager_id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Create a buy"
      description: "Create a buy to the server."
      tags: "Buys"
    };
  }
}

message BuyRequest {
  uint32 wager_id = 1;
  double buying_price = 2;
}

message BuyResponse {
  uint32 id = 1;
  uint32 wager_id = 2 [(validate.rules).uint32.gt = 0];
  double buying_price = 3 [(validate.rules).double.gt = 0];
  google.protobuf.Timestamp bought_at = 4;
}
